--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/node": "^22.13.10",
     "autoprefixer": "^10.4.18",
     "less": "^4.2.0",
     "postcss": "^8.4.35",
