--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.6"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1",
+    "tailwind-scrollbar-hide": "^2.0.0"
   }
 }
